--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@ current: index
 <div class="content">
     <div class="topbar">
         <div class="title">
-            <div class="h2">Admin</div>
-            <a href="#" class="additem" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+            <h2 class="h2">Admin</h2>
+            <a href="#" class="additem" data-bs-toggle="modal" data-bs-target="#createCharacter">
                 <span class="material-icons">
                     add
                 </span>
@@ -22,170 +22,194 @@ current: index
             </a>
         </div>
         <div class="tool">
-            <span class="material-icons">
-                search
-            </span>
-            <span class="material-icons">
-                notifications_active
-            </span>
+            <a href="#"><span class="material-icons">
+                    search
+                </span></a>
+            <a href="#"><span class="material-icons">
+                    notifications_active
+                </span></a>
         </div>
     </div>
     <table class="table">
         <th>
             ID
-            <span class="material-icons header-icon">
-                arrow_downward
-            </span>
+            <a href="#">
+                <span class="material-icons header-icon">
+                    arrow_downward
+                </span>
+            </a>
         </th>
         <th>Name</th>
         <th>Email</th>
         <th>Verified</th>
         <th></th>
-        <tr data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#1</td>
             <td>Emir Wicks</td>
             <td>emir.wicks@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class=" material-icons">
-                    visibility
-                </span>
-                <span class="material-icons" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#2</td>
             <td>Zaina Goldsmith</td>
             <td>zaina.goldsmith@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#3</td>
             <td>Mahima Lopez</td>
             <td>mahima.lopez@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#4</td>
             <td>Pharrell Murray</td>
             <td>pharrell.murray@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#5</td>
             <td>Annika Mcbride</td>
             <td>annika.mcbride@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#6</td>
             <td>Fatimah Clark</td>
             <td>fatimah.clark@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#7</td>
             <td>Klaudia Rhodes</td>
             <td>klaudia.rhodes@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#8</td>
             <td>Tillie Lucero</td>
             <td>tillie.lucero@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#9</td>
             <td>Sabrina Stephenson</td>
             <td>sabrina.stephenson@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
-        <tr>
+        <tr data-bs-toggle="modal" data-bs-target="#characterCard">
             <td>#10</td>
             <td>Annie Smith</td>
             <td>annie.smith@mail.com</td>
             <td>Yes</td>
             <td>
-                <span class="material-icons">
-                    visibility
-                </span>
-                <span class="material-icons">
-                    edit
-                </span>
+                <a href="#"><span class=" material-icons">
+                        visibility
+                    </span></a>
+                <a href="#"><span class="material-icons" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                        edit
+                    </span></a>
             </td>
         </tr>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span class="iconify" data-icon="il:arrow-left" style="color: #198754;" data-width="14"
+                        data-height="14"></span>
+                </a>
+            </li>
+            <li class="page-item page-number"><a class="page-link " href="#">1</a></li>
+            <li class="page-item page-number"><a class="page-link " href="#">2</a></li>
+            <li class="page-item page-number"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span class="iconify" data-icon="fe:arrow-right" style="color: #198754;" data-width="14"
+                        data-height="14"></span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
+
+
+
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="characterCard" tabindex="-1" aria-labelledby="characterCardLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered ">
         <div class="modal-content">
             <div class="modal-card">
@@ -195,7 +219,9 @@ current: index
                         <ul>
                             <li>#1</li>
                             <li>Admin</li>
-                            <li>Emir Wicks</li>
+                            <li>
+                                <h4 class="h4">Emir Wicks</h4>
+                            </li>
                             <li>emir.wicks@mail.com</li>
                         </ul>
                         <div class="card-button">
@@ -217,17 +243,19 @@ current: index
                 </div>
             </div>
             <div class="card-edit collapse" id="collapseExample">
-                <button type="button" class="btn btn-outline-danger">Deactivate</button>
-                <button type="button" class="btn btn-success">Edit</button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Deactivate</button>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#editCharacter">
+                    Edit
+                </button>
             </div>
         </div>
     </div>
 </div>
 
 <!-- Modal2 -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editCharacter" tabindex="-1" aria-labelledby="characterCardLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <form class="modal-content">
             <div class="card-edit-header">
                 <div class="card-edit-title">Edit Admin</div>
                 <div class="card-button">
@@ -240,10 +268,10 @@ current: index
                         <div class="card-edit-content-title">
                             Account
                         </div>
-                        <label for="fname">Name</label>
-                        <input type="text" id="fname" name="firstname" placeholder="Emir Wicks" disabled="disabled">
-                        <label for="lname">Email</label>
-                        <input type="text" id="lname" name="lastname" placeholder="emir.wicks@mail.com"
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Emir Wicks" disabled="disabled">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="emir.wicks@mail.com"
                             disabled="disabled">
                     </div>
                     <div class="card-edit-content">
@@ -318,16 +346,16 @@ current: index
             </div>
             <div class="modal-footer card-edit-submit-button">
                 <button data-bs-dismiss="modal">Cancel</button>
-                <button>Update</button>
+                <input type="submit" value="Update">
             </div>
-        </div>
+        </form>
     </div>
 </div>
 
 <!-- Modal3 -->
-<div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createCharacter" tabindex="-1" aria-labelledby="characterCardLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <form class="modal-content">
             <div class="card-edit-header">
                 <div class="card-edit-title">New Admin</div>
                 <div class="card-button">
@@ -340,10 +368,10 @@ current: index
                         <div class="card-edit-content-title">
                             Account
                         </div>
-                        <label for="fname">Name</label>
-                        <input class="input-unverified" type="text" id="fname" name="firstname">
-                        <label for="lname">Email</label>
-                        <input class="input-unverified" type="text" id="lname" name="lastname">
+                        <label for="name">Name</label>
+                        <input class="input-unverified" type="text" id="name" name="name">
+                        <label for="email">Email</label>
+                        <input class="input-unverified" type="email" id="email" name="email">
                     </div>
                     <div class="card-edit-content">
                         <div class="card-edit-content-title">
@@ -403,9 +431,9 @@ current: index
             </div>
             <div class="modal-footer card-edit-submit-button">
                 <button data-bs-dismiss="modal">Cancel</button>
-                <button>Update</button>
+                <input type="submit" value="Update">
             </div>
-        </div>
+        </form>
     </div>
 </div>
 
